--- a/src/components/model-form/model-form.component.html
+++ b/src/components/model-form/model-form.component.html
@@ -1,30 +1,36 @@
 <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar>
 
-<!--<form>-->
 <mat-card>
-    <div class="form-container">
-        <ng-template let-f ngFor [ngForOf]="model.fields">
+    <!-- <div class="form-container"> -->
+    <mat-grid-list cols="4" rowHeight="2:1">
+        <mat-grid-tile *ngFor="let f of fields">
             <ng-template [ngIf]="f.type === fieldType.Text">
                 <mat-form-field>
-                    <input  matInput placeholder="{{ f.label }}" [(ngModel)]="ngModel[f.key]" [name]="ngModel[f.key]" [disabled]="!f.is_editable" />
+                    <input  matInput placeholder="{{ f.label }}" [(ngModel)]="ngModel[f.key]" [name]="ngModel[f.key]" [disabled]="model !== 'search' && !f.is_editable" />
                 </mat-form-field>
             </ng-template>
             <ng-template [ngIf]="f.type === fieldType.Number">
                 <mat-form-field>
-                    <input  matInput type="number" placeholder="{{ f.label }}" [(ngModel)]="ngModel[f.key]" [name]="ngModel[f.key]" [disabled]="!f.is_editable" />
+                    <input  matInput type="number" placeholder="{{ f.label }}" [(ngModel)]="ngModel[f.key]" [name]="ngModel[f.key]"  [disabled]="model !== 'search' && !f.is_editable" />
                 </mat-form-field>
             </ng-template>
             <ng-template [ngIf]="f.type === fieldType.Boolean">
-                <mat-slide-toggle matInput [(ngModel)]="ngModel[f.key]">{{ f.label }}</mat-slide-toggle>
+                <mat-slide-toggle matInput [(ngModel)]="ngModel[f.key]" [disabled]="model !== 'search' && !f.is_editable" >{{ f.label }}</mat-slide-toggle>
             </ng-template>
             <ng-template [ngIf]="f.type === fieldType.ForeignKey">
                 <mat-form-field>
-                    <mat-select  placeholder="{{ f.label }}" [(ngModel)]="ngModel[f.key]" [disabled]="!f.is_editable">
+                    <mat-select [name]="f.key" placeholder="{{ f.label }}" [(ngModel)]="ngModel[f.key]" [disabled]="model !== 'search' && !f.is_editable">
                         <mat-option></mat-option>
+                        <mat-option [value]="c[f.foreign_model.external_value]" *ngFor="let c of choices[f.key]">{{ c[f.foreign_model.external_label] }}</mat-option>
                     </mat-select>
                 </mat-form-field>
             </ng-template>
-        </ng-template>
-    </div>
+        </mat-grid-tile>
+    </mat-grid-list>
+    <button mat-raised-button color="primary" (click)="_onSubmit()">
+        <span *ngIf="mode === 'search'">Search</span>
+        <span *ngIf="mode === 'create'">Create</span>
+        <span *ngIf="mode === 'edit'">Update</span>
+    </button>
+    <!-- </div> -->
 </mat-card>
-<!--</form>-->
