--- a/src/components/auto-complete-field/auto-complete-field.component.html
+++ b/src/components/auto-complete-field/auto-complete-field.component.html
@@ -1,8 +1,8 @@
-<div class="input-group">
-  <input [id]="modelName+'-input'" 
-  name="group" class="form-control"
-  />
-  <div class="input-group-addon"  style="cursor: pointer">
-    <span class="fa fa-search"></span>
-  </div>
-</div>
+<mat-form-field [formGroup]="form">
+  <input type="text" matInput [placeholder]="field.label" [formControl]="ctrl" [matAutocomplete]="auto">
+  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayWith(foreign_model)">
+      <mat-option *ngFor="let c of filteredOptions | async" [value]="c[foreign_model.external_value_field]">
+        {{ c[foreign_model.external_name_field] }}
+      </mat-option>
+    </mat-autocomplete>
+</mat-form-field>
