--- a/projects/docs/src/app/home/home.component.html
+++ b/projects/docs/src/app/home/home.component.html
@@ -21,3 +21,8 @@
     <p><b>ListViewer</b>: Build listing views for your models with just metadata</p>
     <p><b>FormViewer</b>: Build Creation/Updating forms for your models using your metdata definitions</p>
 </section>
+
+
+<section>
+    <a routerLink="/installation" mat-button color="primary">Get Started</a>
+</section>
