--- a/projects/docs/src/app/home/home.component.html
+++ b/projects/docs/src/app/home/home.component.html
@@ -24,5 +24,5 @@
 
 
 <section>
-    <a routerLink="/installation" mat-button color="primary">Get Started</a>
+    <a routerLink="/installation" mat-raised-button color="primary">Get Started</a>
 </section>
