--- a/projects/crud/src/lib/components/form-field/form-field.component.html
+++ b/projects/crud/src/lib/components/form-field/form-field.component.html
@@ -7,7 +7,7 @@
     <mat-form-field *ngSwitchCase="'textarea'">
         <mat-label>{{ config.label }}</mat-label>
         <textarea matInput matTextareaAutosize [formControlName]="config.name"
-            [rows]="config.rowSpan || 1"></textarea>
+            [rows]="config.control.rowSpan || 1"></textarea>
     </mat-form-field>
 
     <mat-form-field *ngSwitchCase="'select'">
