--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -2,14 +2,14 @@
     <mat-form-field>
         <mat-label>{{ config.label }}</mat-label>
         <button mat-icon-button matPrefix (click)="removeSelection()"><mat-icon [color]="'warn'">delete</mat-icon></button>        
-        <input type="text" matInput [formControlName]="config.name" [matAutocomplete]="auto">
-        <button mat-icon-button matSuffix (click)="openListingDialog()"><mat-icon>search</mat-icon></button>        
-        <!-- <mat-icon matSuffix (click)="openListingDialog()">search</mat-icon> -->
+        <input type="text" matInput [formControl]="_underlyingCtrl" [matAutocomplete]="auto">
     </mat-form-field>
 
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-        <mat-option *ngFor="let option of filteredOptions | async" [value]="option[config.control.metadata.externalValueField]">
+        <mat-option *ngFor="let option of availableOptions | async" [value]="option">
             {{ option[config.control.metadata.externalNameField] }}
         </mat-option>
     </mat-autocomplete>
+
+    <button mat-icon-button matSuffix (click)="openListingDialog($event)"><mat-icon>search</mat-icon></button>        
 </div>
