--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -22,7 +22,7 @@
     </mat-menu>
 </div>
 
-<ng-template [ngIf]="viewConfig.search.enabled">
+<!-- <ng-template [ngIf]="viewConfig.search.enabled"> -->
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -36,7 +36,7 @@
         <div #searchComponent></div>
 
     </mat-expansion-panel>
-</ng-template>
+<!-- </ng-template> -->
 
 <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar>
 
