Fix(#27): Fixed formsets data evaluation and added example

--- a/projects/crud/src/lib/components/formset/formset.component.html
+++ b/projects/crud/src/lib/components/formset/formset.component.html
@@ -7,8 +7,8 @@
         </button>
     </div>
     <ng-container [formArrayName]="config.name">
-        <div class="row"  *ngFor="let ctrl of formArray.controls; let i=index" [formGroupName]="i">
-            <ng-container  *ngFor="let f of config.fields">
+        <div class="row" *ngFor="let ctrl of formArray.controls; let i=index" [formGroupName]="i">
+            <ng-container  *ngFor="let f of control.fields">
                 <ng-crud-form-field [choices]="choices[f.name]" [formGroup]="ctrl" [config]="f"></ng-crud-form-field>
             </ng-container>
         </div>
