Fix(#27): Fixed formsets data evaluation and added example (#29)
* Fix(#27): Fixed formsets data evaluation and added example

--- a/projects/crud/src/lib/components/formset/formset.component.html
+++ b/projects/crud/src/lib/components/formset/formset.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="formGroup">
+<div *ngIf="control">
     <div class="row">
         <h4> {{ config.label }}</h4>
         <span class="spacer"></span>
@@ -6,11 +6,16 @@
             <mat-icon>add_circle</mat-icon>
         </button>
     </div>
-    <ng-container [formArrayName]="config.name">
-        <div class="row"  *ngFor="let ctrl of formArray.controls; let i=index" [formGroupName]="i">
-            <ng-container  *ngFor="let f of config.fields">
-                <ng-crud-form-field [choices]="choices[f.name]" [formGroup]="ctrl" [config]="f"></ng-crud-form-field>
-            </ng-container>
+    <ng-container [formGroup]="formGroup">
+        <div [formArrayName]="config.name">
+            <div class="row" *ngFor="let _formGroup of formArray.controls; index as i; trackBy: trackByFn">
+                <h1>{{ config.name }}, {{ i }}</h1>
+                <ng-container  *ngFor="let field of control.fields" >
+                    <h1>{{ field.name }}</h1>
+                    <br /><br />
+                    <ng-crud-form-field [choices]="choices[field.name]" [formGroup]="_formGroup" [config]="field"></ng-crud-form-field>
+                </ng-container>
+            </div>
         </div>
     </ng-container>
 </div>
