--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -1,11 +1,11 @@
 <!-- <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar> -->
 
-<ng-container *ngIf="checkPermission(viewConfig?.metadata?.name, permissionTypeEnum.read)">
+<ng-container *ngIf="permissionsService.checkPermission(viewConfig?.metadata?.permissions, permissionTypeEnum.read)">
     <ng-template [ngIf]="is_ready">
         <!-- <div class="form-container"> -->
         <div class="row" [formGroup]="formGroup">
             <ng-container *ngFor="let config of _visibleControls">
-                <ng-container *ngIf="checkPermission(config?.name, permissionTypeEnum.read)">
+                <ng-container *ngIf="permissionsService.checkPermission(config?.permissions, permissionTypeEnum.read)">
                     <ng-container *ngIf="config.type === 'fieldset'">
                         <div class="fieldset">
                             <h4>{{ config.label }}</h4>
@@ -25,13 +25,13 @@
         </div>
       
         <div class="row" *ngFor="let config of formsets; let i=index">
-            <ng-container *ngIf="checkPermission(config?.name, permissionTypeEnum.read)">
+            <ng-container *ngIf="permissionsService.checkPermission(config?.permissions, permissionTypeEnum.read)">
                 <mat-divider></mat-divider>
                 <ng-crud-formset [config]="config" [formGroup]="formGroup"></ng-crud-formset>
             </ng-container>
         </div>
     
-        <ng-container *ngIf="checkPermission(viewConfig?.metadata?.name, permissionType)">
+        <ng-container *ngIf="permissionsService.checkPermission(viewConfig?.metadata?.permissions, permissionType)">
             <div class="row">
                 <button mat-raised-button color="primary" class="submit-button" (click)="_onSubmit()">
                     {{ submitButtonText }}
