--- a/projects/crud/src/lib/components/form-field/form-field.component.html
+++ b/projects/crud/src/lib/components/form-field/form-field.component.html
@@ -1,16 +1,17 @@
 <div [ngSwitch]="config.type" class="form-field-wrapper" [formGroup]="formGroup">
 
     <div *ngSwitchCase="'boolean'">
-        <mat-slide-toggle matInput [disabled]="!permissionsService.checkPermission(config?.permissions, permissionTypeEnum.update)"
+        <mat-slide-toggle matInput
+        [disabled]="!permissionsService.checkPermission(config?.permissions, mode === 'edit' ? permissionTypeEnum.update : permissionTypeEnum.read)"
         [formControlName]="config.name">{{ config.label }}</mat-slide-toggle>
     </div>
 
     <ng-container *ngSwitchCase="'textArea'">
-        <ng-crud-text-area-field [formGroup]="formGroup" [config]="config"></ng-crud-text-area-field>
+        <ng-crud-text-area-field [mode]="mode" [formGroup]="formGroup" [config]="config"></ng-crud-text-area-field>
     </ng-container>
 
     <ng-container *ngSwitchCase="'select'">
-        <ng-crud-select-field [formGroup]="formGroup" [config]="config"></ng-crud-select-field>
+        <ng-crud-select-field [mode]="mode" [formGroup]="formGroup" [config]="config"></ng-crud-select-field>
     </ng-container>
 
     <mat-form-field *ngSwitchCase="'date'">
@@ -21,13 +22,14 @@
     </mat-form-field>
     
     <ng-container *ngSwitchCase="'foreignKey'">
-        <ng-crud-foreign-key-field [config]="config" [formGroup]="formGroup"></ng-crud-foreign-key-field>
+        <ng-crud-foreign-key-field [mode]="mode" [config]="config" [formGroup]="formGroup"></ng-crud-foreign-key-field>
     </ng-container>
 
     <!-- this fallsback from number and text -->
     <mat-form-field *ngSwitchDefault>
         <mat-label>{{ config.label }}</mat-label>
-        <input  matInput [readonly]="!permissionsService.checkPermission(config?.permissions, permissionTypeEnum.update)" [formControlName]="config.name"
+        <input matInput 
+        [readonly]="!permissionsService.checkPermission(config?.permissions, mode === 'edit' ? permissionTypeEnum.update : permissionTypeEnum.read)" [formControlName]="config.name"
                 [type]="config.control ? config.control.type : 'text'" />
     </mat-form-field>
 
