--- a/projects/example-app/src/app/app.component.html
+++ b/projects/example-app/src/app/app.component.html
@@ -1,5 +1,11 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="header">
   <a routerLink="/">Ng Crud UI</a>
+  <section>
+    <button mat-button [matMenuTriggerFor]="menu">Permissions</button>
+    <mat-menu #menu="matMenu">
+      <app-test-permissions></app-test-permissions>
+    </mat-menu>
+  </section>
 </mat-toolbar>
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-sidenav-container>
