--- a/projects/crud/src/lib/components/formset/formset.component.html
+++ b/projects/crud/src/lib/components/formset/formset.component.html
@@ -9,9 +9,9 @@
     <ng-container [formGroup]="formGroup">
         <div [formArrayName]="config.name">
             <div class="row" *ngFor="let _formGroup of formArray.controls; index as i; trackBy: trackByFn">
-                <h1>{{ config.name }}, {{ i }}</h1>
+                <!-- <p>{{ config.name }}, {{ i }}</p> -->
                 <ng-container  *ngFor="let field of control.fields" >
-                    <h1>{{ field.name }}</h1>
+                    <!-- <h3>{{ field.name }}</h3> -->
                     <br /><br />
                     <ng-crud-form-field [choices]="choices[field.name]" [formGroup]="_formGroup" [config]="field"></ng-crud-form-field>
                 </ng-container>
