add viewConfig titile and cancel icon in listing comp

--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -2,3 +2,9 @@
     color: blue;
     cursor: pointer;
 }
+.cancel_icon {
+    float:right;
+    cursor:pointer;
+    color:red;
+    position: relative;
+}
