--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -21,6 +21,10 @@
         <button mat-menu-item>Delete</button>
     </mat-menu>
 </div>
+<h2 mat-dialog-title style="padding:10px;" class="separated">
+    <span> {{viewConfig.title}}</span>
+    <mat-icon class="cancel_icon" (click)="cancel()">cancel</mat-icon>
+</h2>
 
 <!-- <ng-template [ngIf]="viewConfig.search.enabled"> -->
     <mat-expansion-panel>
