--- a/projects/crud/src/lib/components/listing/listing.component.scss
+++ b/projects/crud/src/lib/components/listing/listing.component.scss
@@ -5,6 +5,12 @@
 .cancel_icon {
     float:right;
     cursor:pointer;
-    color:red;
     position: relative;
+}
+.mat-dialog-title{
+    margin: 0 0 20px;
+    display: block;
+    border-bottom: 1px solid #eee;
+    background-color: #FAFAFA;
+    border-radius: 6px;
 }
