--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="formGroup">
     <mat-form-field>
         <mat-label>{{ config.label }}</mat-label>
-        <button mat-icon-button matPrefix (click)="removeSelection()"><mat-icon [color]="'warn'">delete</mat-icon></button>        
+        <button mat-icon-button matPrefix (click)="removeSelection()" *ngIf="formGroup.get([config.resolveValueFrom]).value!==null"><mat-icon [color]="'warn'">delete</mat-icon></button>        
         <input type="text" matInput [formControl]="_underlyingCtrl" [matAutocomplete]="auto">
     </mat-form-field>
 
