--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -1,11 +1,22 @@
 .row {
     display: flex;
     flex: 1 1 auto;
-    // justify-content: space-between;
+    justify-content:flex-start;
     flex-flow: row wrap;
 }
 
 .submit-button {
     align-self: flex-end;
     margin-bottom: 45px;
+    margin-right: 10px;
+}
+.actions{
+    justify-content: flex-end !important;
+}
+.input_icon{
+    float:right;
+    color:rgba(165, 151, 151, 0.87);
+    margin-right:-4px;
+    height: 16px !important;
+    cursor: pointer;
 }
