--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -10,7 +10,7 @@
                     <div class="fieldset">
                         <h4>{{ config.label }}</h4>
                         <ng-container *ngFor="let config2 of config.fields">
-                            <ng-crud-form-field [formGroup]="formGroup" [config]="config2"></ng-crud-form-field>
+                            <ng-crud-form-field [reset]="submit" [formGroup]="formGroup" [config]="config2"></ng-crud-form-field>
                         </ng-container>
                     </div>
                 </ng-container>
@@ -18,7 +18,7 @@
                             <ng-crud-formset [config]="config" [formGroup]="form"></ng-crud-formset>
                         </ng-container> -->
                 <ng-container *ngIf="config.type !== 'fieldset' && config.type !== 'formset'">
-                    <ng-crud-form-field [formGroup]="formGroup" [config]="config"></ng-crud-form-field>
+                    <ng-crud-form-field [reset]="submit" [formGroup]="formGroup" [config]="config"></ng-crud-form-field>
                 </ng-container>
             </ng-container>
         </div>
