--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -21,13 +21,13 @@
         <button mat-menu-item>Delete</button>
     </mat-menu>
 </div>
-<h2 mat-dialog-title style="padding:10px;" class="separated">
+<h2 mat-dialog-title style="padding:10px;" class="separated" *ngIf="viewConfig.dialog_mode">
     <span> {{viewConfig.title}}</span>
     <mat-icon class="cancel_icon" (click)="cancel()">cancel</mat-icon>
 </h2>
 
 <!-- <ng-template [ngIf]="viewConfig.search.enabled"> -->
-    <mat-expansion-panel>
+    <mat-expansion-panel *ngIf="viewConfig.search.enabled">
         <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
             <mat-panel-title>
                 <mat-icon>search</mat-icon>
