add display_from and list_from to metadata

--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -30,7 +30,7 @@
 </h2>
 
 <!-- <ng-template [ngIf]="viewConfig.search.enabled"> -->
-<mat-expansion-panel *ngIf="viewConfig.search.enabled">
+<mat-expansion-panel>
     <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
         <mat-panel-title>
             <mat-icon>search</mat-icon>
