--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -1,7 +1,14 @@
 <div [formGroup]="formGroup">
     <mat-form-field>
         <mat-label>{{ config.label }}</mat-label>
-        <button mat-icon-button matPrefix (click)="removeSelection()" *ngIf="formGroup.get([config.resolveValueFrom]).value!==null"><mat-icon [color]="'warn'">delete</mat-icon></button>        
+        <button mat-icon-button matPrefix (click)="removeSelection()"
+            *ngIf="formGroup.get([config.resolveValueFrom]).value!==null">
+            <mat-icon [color]="'warn'">delete</mat-icon>
+        </button>
+        <mat-icon class="input_icon" style="color: rgba(165, 151, 151, 0.87);
+        cursor: pointer;
+        position: absolute;
+        right: 0px;" (click)="openListingDialog($event)">search</mat-icon>
         <input type="text" matInput [formControl]="_underlyingCtrl" [matAutocomplete]="auto">
     </mat-form-field>
 
@@ -11,5 +18,4 @@
         </mat-option>
     </mat-autocomplete>
 
-<mat-icon class="input_icon" (click)="openListingDialog($event)">search</mat-icon>
 </div>
