--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -29,19 +29,19 @@
     <mat-icon class="cancel_icon" (click)="cancel()">cancel</mat-icon>
 </h2>
 
-<!-- <ng-template [ngIf]="viewConfig.search.enabled"> -->
+<ng-template [ngIf]="viewConfig.search.enabled">
 <mat-expansion-panel>
     <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
         <mat-panel-title>
             <mat-icon>search</mat-icon>
-            <mat-label>Search and filter restults</mat-label>
+            <mat-label>Search and filter results</mat-label>
         </mat-panel-title>
     </mat-expansion-panel-header>
 
     <div #searchComponent></div>
 
 </mat-expansion-panel>
-<!-- </ng-template> -->
+</ng-template>
 
 <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar>
 
